create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -11702,7 +11702,7 @@ body {
 }
 .cid-raUUEVCskO .mbr-text {
   color: #000000;
-  text-align: left;
+  text-align: center;
 }
 .cid-raUUEVCskO .mbr-text DIV {
   text-align: center;
