create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2083,7 +2083,7 @@ body {
 }
 .cid-raUCnThbjW .mbr-text {
   color: #000000;
-  text-align: left;
+  text-align: center;
 }
 .cid-raUCnThbjW .mbr-text DIV {
   text-align: center;
