--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1721,45 +1721,21 @@ body {
 .cid-r9RM74TQ7T H2 {
   color: #ffffff;
 }
-.cid-r9WRHy6Kuu {
-  padding-top: 60px;
-  padding-bottom: 15px;
+.cid-rbcupeRR5I {
+  padding-top: 45px;
+  padding-bottom: 45px;
   background-color: #ffffff;
 }
-.cid-r9WRHy6Kuu .mbr-section-subtitle {
+.cid-rbcupeRR5I .mbr-text,
+.cid-rbcupeRR5I blockquote {
   color: #767676;
 }
-.cid-r9WRHy6Kuu .media-row {
-  display: -webkit-flex;
-  justify-content: center;
-  -webkit-justify-content: center;
+.cid-rbcupeRR5I .mbr-text B {
+  color: #000000;
 }
-.cid-r9WRHy6Kuu .team-item {
-  transition: all .2s;
-  margin-bottom: 2rem;
-}
-.cid-r9WRHy6Kuu .team-item .item-image img {
-  width: 100%;
-}
-.cid-r9WRHy6Kuu .team-item .item-name p {
-  margin-bottom: 0;
-}
-.cid-r9WRHy6Kuu .team-item .item-role p {
-  margin-bottom: 0;
-}
-.cid-r9WRHy6Kuu .team-item .item-social {
-  display: -webkit-flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  -webkit-flex-wrap: wrap;
-  -webkit-justify-content: center;
-}
-.cid-r9WRHy6Kuu .team-item .item-social .socicon {
-  color: #232323;
-  font-size: 17px;
-}
-.cid-r9WRHy6Kuu .team-item .item-caption {
-  background: #ffffff;
+.cid-rbcupeRR5I .mbr-text {
+  color: #000000;
+  text-align: center;
 }
 .cid-raNBJ0iQ2J {
   padding-top: 30px;
