--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1724,7 +1724,7 @@ body {
 .cid-raNAIBRnkE {
   background: #ffffff;
   padding-top: 60px;
-  padding-bottom: 60px;
+  padding-bottom: 0px;
 }
 .cid-raNAIBRnkE .video-block {
   margin: auto;
@@ -1734,19 +1734,197 @@ body {
     width: 100% !important;
   }
 }
-.cid-rbcupeRR5I {
+.cid-rc1kZEPtkN {
   padding-top: 0px;
-  padding-bottom: 45px;
+  padding-bottom: 0px;
   background-color: #ffffff;
 }
-.cid-rbcupeRR5I .mbr-text,
-.cid-rbcupeRR5I blockquote {
+.cid-rc1kZEPtkN .mbr-section-subtitle {
   color: #767676;
+  font-weight: 300;
 }
-.cid-rbcupeRR5I .mbr-text B {
+.cid-rc1kZEPtkN .number-wrap {
   color: #000000;
+  border-color: rgba(255, 255, 255, 0.15);
+  position: relative;
+  display: inline-block;
+  text-align: center;
+  padding: 5px 10px 13px 10px;
+  margin: 0;
+  min-width: 118px;
+  border-radius: 2px;
+  max-width: 100%;
 }
-.cid-rbcupeRR5I .mbr-text {
+.cid-rc1kZEPtkN .number {
+  font-style: normal;
+  font-weight: 700;
+  text-transform: none;
+  letter-spacing: -2px;
+  font-size: 55px;
+  word-spacing: 0;
+  line-height: 1.3;
+  color: #1ea416;
+}
+.cid-rc1kZEPtkN .period {
+  display: block;
+  padding-top: 2px;
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
+}
+.cid-rc1kZEPtkN .dot {
+  position: absolute;
+  top: -10px;
+  right: -1em;
+  width: 1em;
+  display: block;
+  font-size: 55px;
+  height: 83%;
+  overflow: hidden;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 89.65px;
+  text-transform: none;
+  letter-spacing: 0;
+  word-spacing: 0;
+  color: #1ea416;
+}
+.cid-rc1kZEPtkN .countdown-cont {
+  background: linear-gradient(45deg, #ffffff, #ffffff);
+  max-width: 700px;
+  border-radius: 3px;
+  margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .cid-rc1kZEPtkN .dot {
+    display: none;
+  }
+}
+@media (max-width: 543px) {
+  .cid-rc1kZEPtkN .number-wrap {
+    margin-bottom: 15px;
+  }
+}
+@media (max-width: 550px) {
+  .cid-rc1kZEPtkN .col-xs-3 {
+    padding-left: 0;
+    padding-right: 0;
+  }
+  .cid-rc1kZEPtkN .number-wrap {
+    min-width: auto;
+  }
+}
+@media (max-width: 440px) {
+  .cid-rc1kZEPtkN .number,
+  .cid-rc1kZEPtkN .dot {
+    font-size: 40px;
+  }
+}
+@media (max-width: 380px) {
+  .cid-rc1kZEPtkN .period {
+    font-size: 0.8rem;
+  }
+}
+.cid-rc1kZEPtkN H4 {
+  color: #000000;
+  text-align: center;
+}
+.cid-rc1kZEPtkN H5 {
+  color: #000000;
+  text-align: center;
+}
+.cid-rc1l0xecjD {
+  padding-top: 0px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-rc1l0xecjD .mbr-section-subtitle {
+  color: #767676;
+  font-weight: 300;
+}
+.cid-rc1l0xecjD .number-wrap {
+  color: #000000;
+  border-color: rgba(255, 255, 255, 0.15);
+  position: relative;
+  display: inline-block;
+  text-align: center;
+  padding: 5px 10px 13px 10px;
+  margin: 0;
+  min-width: 118px;
+  border-radius: 2px;
+  max-width: 100%;
+}
+.cid-rc1l0xecjD .number {
+  font-style: normal;
+  font-weight: 700;
+  text-transform: none;
+  letter-spacing: -2px;
+  font-size: 55px;
+  word-spacing: 0;
+  line-height: 1.3;
+  color: #1ea416;
+}
+.cid-rc1l0xecjD .period {
+  display: block;
+  padding-top: 2px;
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
+}
+.cid-rc1l0xecjD .dot {
+  position: absolute;
+  top: -10px;
+  right: -1em;
+  width: 1em;
+  display: block;
+  font-size: 55px;
+  height: 83%;
+  overflow: hidden;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 89.65px;
+  text-transform: none;
+  letter-spacing: 0;
+  word-spacing: 0;
+  color: #1ea416;
+}
+.cid-rc1l0xecjD .countdown-cont {
+  background: linear-gradient(45deg, #ffffff, #ffffff);
+  max-width: 700px;
+  border-radius: 3px;
+  margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .cid-rc1l0xecjD .dot {
+    display: none;
+  }
+}
+@media (max-width: 543px) {
+  .cid-rc1l0xecjD .number-wrap {
+    margin-bottom: 15px;
+  }
+}
+@media (max-width: 550px) {
+  .cid-rc1l0xecjD .col-xs-3 {
+    padding-left: 0;
+    padding-right: 0;
+  }
+  .cid-rc1l0xecjD .number-wrap {
+    min-width: auto;
+  }
+}
+@media (max-width: 440px) {
+  .cid-rc1l0xecjD .number,
+  .cid-rc1l0xecjD .dot {
+    font-size: 40px;
+  }
+}
+@media (max-width: 380px) {
+  .cid-rc1l0xecjD .period {
+    font-size: 0.8rem;
+  }
+}
+.cid-rc1l0xecjD H4 {
+  color: #000000;
+  text-align: center;
+}
+.cid-rc1l0xecjD H5 {
   color: #000000;
   text-align: center;
 }
@@ -11861,99 +12039,6 @@ body {
 }
 .cid-raUZ6Im2dF H2 {
   color: #ffffff;
-}
-.cid-raUZ7VVbiu {
-  padding-top: 0px;
-  padding-bottom: 0px;
-  background-color: #ffffff;
-}
-.cid-raUZ7VVbiu .mbr-section-subtitle {
-  color: #767676;
-  font-weight: 300;
-}
-.cid-raUZ7VVbiu .number-wrap {
-  color: #000000;
-  border-color: rgba(255, 255, 255, 0.15);
-  position: relative;
-  display: inline-block;
-  text-align: center;
-  padding: 5px 10px 13px 10px;
-  margin: 0;
-  min-width: 118px;
-  border-radius: 2px;
-  max-width: 100%;
-}
-.cid-raUZ7VVbiu .number {
-  font-style: normal;
-  font-weight: 700;
-  text-transform: none;
-  letter-spacing: -2px;
-  font-size: 55px;
-  word-spacing: 0;
-  line-height: 1.3;
-  color: #1ea416;
-}
-.cid-raUZ7VVbiu .period {
-  display: block;
-  padding-top: 2px;
-  border-top: 1px solid rgba(0, 0, 0, 0.1);
-}
-.cid-raUZ7VVbiu .dot {
-  position: absolute;
-  top: -10px;
-  right: -1em;
-  width: 1em;
-  display: block;
-  font-size: 55px;
-  height: 83%;
-  overflow: hidden;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 89.65px;
-  text-transform: none;
-  letter-spacing: 0;
-  word-spacing: 0;
-  color: #1ea416;
-}
-.cid-raUZ7VVbiu .countdown-cont {
-  background: linear-gradient(45deg, #ffffff, #ffffff);
-  max-width: 700px;
-  border-radius: 3px;
-  margin: 0 auto;
-}
-@media (max-width: 768px) {
-  .cid-raUZ7VVbiu .dot {
-    display: none;
-  }
-}
-@media (max-width: 543px) {
-  .cid-raUZ7VVbiu .number-wrap {
-    margin-bottom: 15px;
-  }
-}
-@media (max-width: 550px) {
-  .cid-raUZ7VVbiu .col-xs-3 {
-    padding-left: 0;
-    padding-right: 0;
-  }
-  .cid-raUZ7VVbiu .number-wrap {
-    min-width: auto;
-  }
-}
-@media (max-width: 440px) {
-  .cid-raUZ7VVbiu .number,
-  .cid-raUZ7VVbiu .dot {
-    font-size: 40px;
-  }
-}
-@media (max-width: 380px) {
-  .cid-raUZ7VVbiu .period {
-    font-size: 0.8rem;
-  }
-}
-.cid-raUZ7VVbiu H4 {
-  color: #000000;
-  text-align: center;
 }
 .cid-raUWXeYsdn {
   padding-top: 0px;
