create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -11327,7 +11327,7 @@ body {
 .cid-r9j1XYj75m {
   padding-top: 135px;
   padding-bottom: 135px;
-  background-image: url("../../../assets/images/acorns-background-board-699380-2000x1333.jpg");
+  background-image: url("../../../assets/images/2016-concert-december-31-3867-1920x1440.jpg");
 }
 .cid-r9j1XYj75m B {
   color: #ffffff;
@@ -11463,7 +11463,7 @@ body {
   color: #767676;
 }
 .cid-raURLMJJFn .mbr-section-subtitle {
-  color: #767676;
+  color: #000000;
   font-weight: 300;
 }
 .cid-raURLMJJFn .toggle-content {
@@ -11535,218 +11535,6 @@ body {
 .cid-raURLMJJFn H2 {
   text-align: center;
 }
-.cid-raUUz6jOAC {
-  padding-top: 30px;
-  padding-bottom: 0px;
-  background-color: #1ea416;
-}
-.cid-raUUz6jOAC H2 {
-  color: #ffffff;
-}
-.cid-raUUxguFeB {
-  background: #ffffff;
-  padding-top: 60px;
-  padding-bottom: 30px;
-}
-.cid-raUUxguFeB .video-block {
-  margin: auto;
-}
-@media (max-width: 768px) {
-  .cid-raUUxguFeB .video-block {
-    width: 100% !important;
-  }
-}
-.cid-raUUEVCskO {
-  padding-top: 0px;
-  padding-bottom: 60px;
-  background-color: #ffffff;
-}
-.cid-raUUEVCskO .mbr-text,
-.cid-raUUEVCskO blockquote {
-  color: #767676;
-}
-.cid-raUUEVCskO .mbr-text B {
-  color: #000000;
-}
-.cid-raUUEVCskO .mbr-text {
-  color: #000000;
-  text-align: center;
-}
-.cid-raUUEVCskO .mbr-text DIV {
-  text-align: center;
-}
-.cid-raUHVihGiE {
-  padding-top: 30px;
-  padding-bottom: 0px;
-  background-color: #1ea416;
-}
-.cid-raUHVihGiE H2 {
-  color: #ffffff;
-}
-.cid-raUSas8y6L {
-  padding-top: 75px;
-  padding-bottom: 75px;
-  position: relative;
-  background-color: #ffffff;
-}
-.cid-raUSas8y6L p {
-  color: #767676;
-}
-.cid-raUSas8y6L .mbr-section-subtitle {
-  color: #767676;
-  font-weight: 300;
-}
-.cid-raUSas8y6L .toggle-content {
-  flex-basis: 100%;
-  -webkit-flex-basis: 100%;
-}
-.cid-raUSas8y6L .card {
-  border-radius: 0px;
-  margin-bottom: -1px;
-}
-.cid-raUSas8y6L .card .card-header {
-  border-radius: 0px;
-  border: 0px;
-  padding: 0;
-}
-.cid-raUSas8y6L .card .card-header a.panel-title {
-  margin-bottom: 0;
-  margin-top: -1px;
-  font-weight: 500;
-  font-style: normal;
-  display: block;
-  text-decoration: none !important;
-}
-.cid-raUSas8y6L .card .card-header a.panel-title:focus {
-  text-decoration: none !important;
-}
-.cid-raUSas8y6L .card .card-header a.panel-title h4 {
-  border: 1px solid #dfdfdf;
-  padding: 1.3rem 2rem;
-  margin-bottom: 0;
-}
-.cid-raUSas8y6L .card .card-header a.panel-title h4 .sign {
-  padding-right: 1rem;
-}
-.cid-raUSas8y6L .mbr-figure {
-  align-self: flex-start;
-  -webkit-align-self: flex-start;
-}
-@media (max-width: 991px) {
-  .cid-raUSas8y6L .mbr-figure {
-    padding-top: 2rem;
-    padding-top: 0;
-    padding-bottom: 2rem;
-  }
-  .cid-raUSas8y6L .media-container-row {
-    -webkit-flex-direction: column-reverse;
-    flex-direction: column-reverse;
-  }
-}
-@media (min-width: 992px) {
-  .cid-raUSas8y6L .mbr-figure {
-    padding-left: 4rem;
-    padding-left: 0;
-    padding-right: 4rem;
-  }
-  .cid-raUSas8y6L .media-container-row {
-    -webkit-flex-direction: row-reverse;
-    flex-direction: row-reverse;
-  }
-}
-.cid-raUSas8y6L H4 {
-  color: #000000;
-  text-align: center;
-}
-.cid-raUSas8y6L .panel-text {
-  text-align: left;
-  color: #000000;
-}
-.cid-raUSas8y6L H2 {
-  text-align: center;
-}
-.cid-raUSejMptm {
-  padding-top: 0px;
-  padding-bottom: 75px;
-  position: relative;
-  background-color: #ffffff;
-}
-.cid-raUSejMptm p {
-  color: #767676;
-}
-.cid-raUSejMptm .mbr-section-subtitle {
-  color: #767676;
-  font-weight: 300;
-}
-.cid-raUSejMptm .toggle-content {
-  flex-basis: 100%;
-  -webkit-flex-basis: 100%;
-}
-.cid-raUSejMptm .card {
-  border-radius: 0px;
-  margin-bottom: -1px;
-}
-.cid-raUSejMptm .card .card-header {
-  border-radius: 0px;
-  border: 0px;
-  padding: 0;
-}
-.cid-raUSejMptm .card .card-header a.panel-title {
-  margin-bottom: 0;
-  margin-top: -1px;
-  font-weight: 500;
-  font-style: normal;
-  display: block;
-  text-decoration: none !important;
-}
-.cid-raUSejMptm .card .card-header a.panel-title:focus {
-  text-decoration: none !important;
-}
-.cid-raUSejMptm .card .card-header a.panel-title h4 {
-  border: 1px solid #dfdfdf;
-  padding: 1.3rem 2rem;
-  margin-bottom: 0;
-}
-.cid-raUSejMptm .card .card-header a.panel-title h4 .sign {
-  padding-right: 1rem;
-}
-.cid-raUSejMptm .mbr-figure {
-  align-self: flex-start;
-  -webkit-align-self: flex-start;
-}
-@media (max-width: 991px) {
-  .cid-raUSejMptm .mbr-figure {
-    padding-top: 2rem;
-    padding-top: 0;
-    padding-bottom: 2rem;
-  }
-  .cid-raUSejMptm .media-container-row {
-    -webkit-flex-direction: column-reverse;
-    flex-direction: column-reverse;
-  }
-}
-@media (min-width: 992px) {
-  .cid-raUSejMptm .mbr-figure {
-    padding-left: 4rem;
-    padding-left: 0;
-    padding-right: 4rem;
-  }
-  .cid-raUSejMptm .media-container-row {
-    -webkit-flex-direction: row-reverse;
-    flex-direction: row-reverse;
-  }
-}
-.cid-raUSejMptm H4 {
-  color: #000000;
-  text-align: center;
-}
-.cid-raUSejMptm .panel-text {
-  text-align: left;
-  color: #000000;
-}
-.cid-raUSejMptm H2 {
-  text-align: center;
-}
 .cid-raV1sipvFb {
   padding-top: 30px;
   padding-bottom: 0px;
@@ -11793,7 +11581,7 @@ body {
   text-align: left;
 }
 .cid-raV1R9RGkC .mbr-text DIV {
-  text-align: center;
+  text-align: left;
 }
 .cid-raV1wKZ5Dh {
   padding-top: 0px;
@@ -11890,8 +11678,8 @@ body {
   text-align: center;
 }
 .cid-raUvKpnWwV {
-  padding-top: 30px;
-  padding-bottom: 60px;
+  padding-top: 0px;
+  padding-bottom: 0px;
   position: relative;
   background-color: #ffffff;
 }
@@ -11935,291 +11723,88 @@ body {
   color: #000000;
   text-align: center;
 }
-.cid-raUZ6Im2dF {
+.cid-rdOB7XBgf2 {
   padding-top: 30px;
   padding-bottom: 0px;
-  background-color: #1ea416;
+  background-color: #ffffff;
 }
-.cid-raUZ6Im2dF H2 {
-  color: #ffffff;
+.cid-rdOB7XBgf2 .mbr-text,
+.cid-rdOB7XBgf2 blockquote {
+  color: #767676;
 }
-.cid-raUWXeYsdn {
+.cid-rdOB7XBgf2 .mbr-text B {
+  color: #000000;
+}
+.cid-rdOB7XBgf2 .mbr-text {
+  color: #000000;
+  text-align: left;
+}
+.cid-rdOB7XBgf2 .mbr-text DIV {
+  text-align: center;
+}
+.cid-rdOB9FyD8W {
   padding-top: 0px;
+  padding-bottom: 0px;
+  position: relative;
+  background-color: #ffffff;
+}
+.cid-rdOB9FyD8W .card {
+  border-radius: 0px;
+  margin-bottom: -1px;
+}
+.cid-rdOB9FyD8W .card .card-header {
+  border-radius: 0px;
+  border: 0px;
+  padding: 0;
+}
+.cid-rdOB9FyD8W .card .card-header a.panel-title {
+  margin-bottom: 0;
+  font-style: normal;
+  font-weight: 500;
+  display: block;
+  text-decoration: none !important;
+  margin-top: -1px;
+  line-height: normal;
+}
+.cid-rdOB9FyD8W .card .card-header a.panel-title:focus {
+  text-decoration: none !important;
+}
+.cid-rdOB9FyD8W .card .card-header a.panel-title h4 {
+  padding: 1.3rem 2rem;
+  border: 1px solid #dfdfdf;
+  margin-bottom: 0;
+}
+.cid-rdOB9FyD8W .card .card-header a.panel-title h4 .sign {
+  padding-right: 1rem;
+}
+.cid-rdOB9FyD8W .card .panel-body {
+  color: #767676;
+}
+.cid-rdOB9FyD8W .panel-text {
+  color: #000000;
+  text-align: left;
+}
+.cid-rdOB9FyD8W H4 {
+  color: #000000;
+  text-align: center;
+}
+.cid-rdOBDgsDot {
+  padding-top: 30px;
   padding-bottom: 0px;
   background-color: #ffffff;
 }
-.cid-raUWXeYsdn .mbr-section-subtitle {
+.cid-rdOBDgsDot .mbr-text,
+.cid-rdOBDgsDot blockquote {
   color: #767676;
-  font-weight: 300;
 }
-.cid-raUWXeYsdn .number-wrap {
+.cid-rdOBDgsDot .mbr-text B {
   color: #000000;
-  border-color: rgba(255, 255, 255, 0.15);
-  position: relative;
-  display: inline-block;
-  text-align: center;
-  padding: 5px 10px 13px 10px;
-  margin: 0;
-  min-width: 118px;
-  border-radius: 2px;
-  max-width: 100%;
 }
-.cid-raUWXeYsdn .number {
-  font-style: normal;
-  font-weight: 700;
-  text-transform: none;
-  letter-spacing: -2px;
-  font-size: 55px;
-  word-spacing: 0;
-  line-height: 1.3;
-  color: #1ea416;
-}
-.cid-raUWXeYsdn .period {
-  display: block;
-  padding-top: 2px;
-  border-top: 1px solid rgba(0, 0, 0, 0.1);
-}
-.cid-raUWXeYsdn .dot {
-  position: absolute;
-  top: -10px;
-  right: -1em;
-  width: 1em;
-  display: block;
-  font-size: 55px;
-  height: 83%;
-  overflow: hidden;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 89.65px;
-  text-transform: none;
-  letter-spacing: 0;
-  word-spacing: 0;
-  color: #1ea416;
-}
-.cid-raUWXeYsdn .countdown-cont {
-  background: linear-gradient(45deg, #ffffff, #ffffff);
-  max-width: 700px;
-  border-radius: 3px;
-  margin: 0 auto;
-}
-@media (max-width: 768px) {
-  .cid-raUWXeYsdn .dot {
-    display: none;
-  }
-}
-@media (max-width: 543px) {
-  .cid-raUWXeYsdn .number-wrap {
-    margin-bottom: 15px;
-  }
-}
-@media (max-width: 550px) {
-  .cid-raUWXeYsdn .col-xs-3 {
-    padding-left: 0;
-    padding-right: 0;
-  }
-  .cid-raUWXeYsdn .number-wrap {
-    min-width: auto;
-  }
-}
-@media (max-width: 440px) {
-  .cid-raUWXeYsdn .number,
-  .cid-raUWXeYsdn .dot {
-    font-size: 40px;
-  }
-}
-@media (max-width: 380px) {
-  .cid-raUWXeYsdn .period {
-    font-size: 0.8rem;
-  }
-}
-.cid-raUWXeYsdn H4 {
+.cid-rdOBDgsDot .mbr-text {
   color: #000000;
-  text-align: center;
+  text-align: left;
 }
-.cid-raUY0povvo {
-  padding-top: 0px;
-  padding-bottom: 0px;
-  background-color: #ffffff;
-}
-.cid-raUY0povvo .mbr-section-subtitle {
-  color: #767676;
-  font-weight: 300;
-}
-.cid-raUY0povvo .number-wrap {
-  color: #000000;
-  border-color: rgba(255, 255, 255, 0.15);
-  position: relative;
-  display: inline-block;
-  text-align: center;
-  padding: 5px 10px 13px 10px;
-  margin: 0;
-  min-width: 118px;
-  border-radius: 2px;
-  max-width: 100%;
-}
-.cid-raUY0povvo .number {
-  font-style: normal;
-  font-weight: 700;
-  text-transform: none;
-  letter-spacing: -2px;
-  font-size: 55px;
-  word-spacing: 0;
-  line-height: 1.3;
-  color: #1ea416;
-}
-.cid-raUY0povvo .period {
-  display: block;
-  padding-top: 2px;
-  border-top: 1px solid rgba(0, 0, 0, 0.1);
-}
-.cid-raUY0povvo .dot {
-  position: absolute;
-  top: -10px;
-  right: -1em;
-  width: 1em;
-  display: block;
-  font-size: 55px;
-  height: 83%;
-  overflow: hidden;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 89.65px;
-  text-transform: none;
-  letter-spacing: 0;
-  word-spacing: 0;
-  color: #1ea416;
-}
-.cid-raUY0povvo .countdown-cont {
-  background: linear-gradient(45deg, #ffffff, #ffffff);
-  max-width: 700px;
-  border-radius: 3px;
-  margin: 0 auto;
-}
-@media (max-width: 768px) {
-  .cid-raUY0povvo .dot {
-    display: none;
-  }
-}
-@media (max-width: 543px) {
-  .cid-raUY0povvo .number-wrap {
-    margin-bottom: 15px;
-  }
-}
-@media (max-width: 550px) {
-  .cid-raUY0povvo .col-xs-3 {
-    padding-left: 0;
-    padding-right: 0;
-  }
-  .cid-raUY0povvo .number-wrap {
-    min-width: auto;
-  }
-}
-@media (max-width: 440px) {
-  .cid-raUY0povvo .number,
-  .cid-raUY0povvo .dot {
-    font-size: 40px;
-  }
-}
-@media (max-width: 380px) {
-  .cid-raUY0povvo .period {
-    font-size: 0.8rem;
-  }
-}
-.cid-raUY0povvo H4 {
-  color: #000000;
-  text-align: center;
-}
-.cid-raUXiPvSLG {
-  padding-top: 0px;
-  padding-bottom: 30px;
-  background-color: #ffffff;
-}
-.cid-raUXiPvSLG .mbr-section-subtitle {
-  color: #767676;
-  font-weight: 300;
-}
-.cid-raUXiPvSLG .number-wrap {
-  color: #000000;
-  border-color: rgba(255, 255, 255, 0.15);
-  position: relative;
-  display: inline-block;
-  text-align: center;
-  padding: 5px 10px 13px 10px;
-  margin: 0;
-  min-width: 118px;
-  border-radius: 2px;
-  max-width: 100%;
-}
-.cid-raUXiPvSLG .number {
-  font-style: normal;
-  font-weight: 700;
-  text-transform: none;
-  letter-spacing: -2px;
-  font-size: 55px;
-  word-spacing: 0;
-  line-height: 1.3;
-  color: #1ea416;
-}
-.cid-raUXiPvSLG .period {
-  display: block;
-  padding-top: 2px;
-  border-top: 1px solid rgba(0, 0, 0, 0.1);
-}
-.cid-raUXiPvSLG .dot {
-  position: absolute;
-  top: -10px;
-  right: -1em;
-  width: 1em;
-  display: block;
-  font-size: 55px;
-  height: 83%;
-  overflow: hidden;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 89.65px;
-  text-transform: none;
-  letter-spacing: 0;
-  word-spacing: 0;
-  color: #1ea416;
-}
-.cid-raUXiPvSLG .countdown-cont {
-  background: linear-gradient(45deg, #ffffff, #ffffff);
-  max-width: 700px;
-  border-radius: 3px;
-  margin: 0 auto;
-}
-@media (max-width: 768px) {
-  .cid-raUXiPvSLG .dot {
-    display: none;
-  }
-}
-@media (max-width: 543px) {
-  .cid-raUXiPvSLG .number-wrap {
-    margin-bottom: 15px;
-  }
-}
-@media (max-width: 550px) {
-  .cid-raUXiPvSLG .col-xs-3 {
-    padding-left: 0;
-    padding-right: 0;
-  }
-  .cid-raUXiPvSLG .number-wrap {
-    min-width: auto;
-  }
-}
-@media (max-width: 440px) {
-  .cid-raUXiPvSLG .number,
-  .cid-raUXiPvSLG .dot {
-    font-size: 40px;
-  }
-}
-@media (max-width: 380px) {
-  .cid-raUXiPvSLG .period {
-    font-size: 0.8rem;
-  }
-}
-.cid-raUXiPvSLG H4 {
-  color: #000000;
+.cid-rdOBDgsDot .mbr-text DIV {
   text-align: center;
 }
 .cid-r6KAjJ3ZSX {
