--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1713,124 +1713,6 @@ body {
   padding-bottom: 0px;
   background-color: #ffffff;
 }
-.cid-raNBJ0iQ2J {
-  padding-top: 30px;
-  padding-bottom: 0px;
-  background-color: #1ea416;
-}
-.cid-raNBJ0iQ2J H2 {
-  color: #ffffff;
-}
-.cid-raNAIBRnkE {
-  background: #ffffff;
-  padding-top: 60px;
-  padding-bottom: 0px;
-}
-.cid-raNAIBRnkE .video-block {
-  margin: auto;
-}
-@media (max-width: 768px) {
-  .cid-raNAIBRnkE .video-block {
-    width: 100% !important;
-  }
-}
-.cid-rc1l0xecjD {
-  padding-top: 0px;
-  padding-bottom: 30px;
-  background-color: #ffffff;
-}
-.cid-rc1l0xecjD .mbr-section-subtitle {
-  color: #767676;
-  font-weight: 300;
-}
-.cid-rc1l0xecjD .number-wrap {
-  color: #000000;
-  border-color: rgba(255, 255, 255, 0.15);
-  position: relative;
-  display: inline-block;
-  text-align: center;
-  padding: 5px 10px 13px 10px;
-  margin: 0;
-  min-width: 118px;
-  border-radius: 2px;
-  max-width: 100%;
-}
-.cid-rc1l0xecjD .number {
-  font-style: normal;
-  font-weight: 700;
-  text-transform: none;
-  letter-spacing: -2px;
-  font-size: 55px;
-  word-spacing: 0;
-  line-height: 1.3;
-  color: #1ea416;
-}
-.cid-rc1l0xecjD .period {
-  display: block;
-  padding-top: 2px;
-  border-top: 1px solid rgba(0, 0, 0, 0.1);
-}
-.cid-rc1l0xecjD .dot {
-  position: absolute;
-  top: -10px;
-  right: -1em;
-  width: 1em;
-  display: block;
-  font-size: 55px;
-  height: 83%;
-  overflow: hidden;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 89.65px;
-  text-transform: none;
-  letter-spacing: 0;
-  word-spacing: 0;
-  color: #1ea416;
-}
-.cid-rc1l0xecjD .countdown-cont {
-  background: linear-gradient(45deg, #ffffff, #ffffff);
-  max-width: 700px;
-  border-radius: 3px;
-  margin: 0 auto;
-}
-@media (max-width: 768px) {
-  .cid-rc1l0xecjD .dot {
-    display: none;
-  }
-}
-@media (max-width: 543px) {
-  .cid-rc1l0xecjD .number-wrap {
-    margin-bottom: 15px;
-  }
-}
-@media (max-width: 550px) {
-  .cid-rc1l0xecjD .col-xs-3 {
-    padding-left: 0;
-    padding-right: 0;
-  }
-  .cid-rc1l0xecjD .number-wrap {
-    min-width: auto;
-  }
-}
-@media (max-width: 440px) {
-  .cid-rc1l0xecjD .number,
-  .cid-rc1l0xecjD .dot {
-    font-size: 40px;
-  }
-}
-@media (max-width: 380px) {
-  .cid-rc1l0xecjD .period {
-    font-size: 0.8rem;
-  }
-}
-.cid-rc1l0xecjD H4 {
-  color: #000000;
-  text-align: center;
-}
-.cid-rc1l0xecjD H5 {
-  color: #000000;
-  text-align: center;
-}
 .cid-r6yc14mR1g {
   padding-top: 30px;
   padding-bottom: 0px;
@@ -11335,118 +11217,19 @@ body {
 .cid-r9j1XYj75m H3 {
   color: #ffffff;
 }
-.cid-r9p0bbTBps {
-  padding-top: 45px;
-  padding-bottom: 15px;
+.cid-re6LsL1tO1 {
+  padding-top: 0px;
+  padding-bottom: 0px;
   background: linear-gradient(45deg, #ffffff, #ffffff);
 }
-.cid-r9p0bbTBps .mbr-section-subtitle {
+.cid-re6LsL1tO1 .mbr-section-subtitle {
   font-style: italic;
   letter-spacing: 1rem;
 }
-.cid-r9p0bbTBps .mbr-section-title,
-.cid-r9p0bbTBps .mbr-section-btn {
-  color: #000000;
+.cid-re6LsL1tO1 .mbr-section-title,
+.cid-re6LsL1tO1 .mbr-section-btn {
+  color: #ffffff;
   text-align: center;
-}
-.cid-r9j3XiXeeZ {
-  padding-top: 0px;
-  padding-bottom: 60px;
-  background-color: #ffffff;
-}
-.cid-r9j3XiXeeZ .mbr-section-subtitle {
-  color: #000000;
-}
-.cid-r9j3XiXeeZ .formoid {
-  margin: auto;
-}
-.cid-r9j3XiXeeZ .form-control {
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
-}
-.cid-r9j3XiXeeZ a.btn {
-  flex: 0 0 auto;
-  -webkit-flex: 0 0 auto;
-}
-.cid-r9j3XiXeeZ .input-group-btn {
-  align-self: center;
-  -webkit-align-self: center;
-  z-index: 3;
-}
-.cid-r9j3XiXeeZ .input-group-btn .btn {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-  border-top-right-radius: 3px;
-  border-bottom-right-radius: 3px;
-}
-.cid-r9j3XiXeeZ a:not([href]):not([tabindex]) {
-  color: #fff;
-}
-.cid-r9j3XiXeeZ a.btn-white:not([href]):not([tabindex]) {
-  color: #333;
-}
-.cid-r9j3XiXeeZ .mbr-subscribe .input-group-btn {
-  display: inline-block;
-}
-.cid-r9j3XiXeeZ .mbr-subscribe .input-group-btn button,
-.cid-r9j3XiXeeZ .mbr-subscribe .input-group-btn a {
-  margin-top: 0 !important;
-  margin-bottom: 0 !important;
-}
-@media (max-width: 350px) {
-  .cid-r9j3XiXeeZ .mbr-subscribe {
-    flex-direction: column;
-    -webkit-flex-direction: column;
-  }
-  .cid-r9j3XiXeeZ input[type="email"] {
-    width: 100%;
-    margin-bottom: 2px;
-  }
-  .cid-r9j3XiXeeZ .input-group-btn {
-    width: 100%;
-  }
-  .cid-r9j3XiXeeZ .input-group-btn .btn {
-    border-radius: 3px;
-  }
-}
-@media (max-width: 768px) {
-  .cid-r9j3XiXeeZ .input-group-btn a.btn {
-    width: 100%;
-  }
-  .cid-r9j3XiXeeZ .input-group-btn {
-    width: calc(92%);
-  }
-  .cid-r9j3XiXeeZ .input-group-btn button[type="submit"] {
-    width: 100%;
-  }
-  .cid-r9j3XiXeeZ .input-group {
-    display: -webkit-flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    margin: auto;
-    max-width: 300px;
-    -webkit-flex-direction: column;
-    -webkit-flex-wrap: wrap;
-  }
-  .cid-r9j3XiXeeZ .input-group input[type="email"] {
-    width: 100%;
-    margin-bottom: 3px;
-  }
-  .cid-r9j3XiXeeZ .input-group span {
-    display: inline;
-    padding-left: 0;
-    padding-right: 0;
-  }
-  .cid-r9j3XiXeeZ .input-group-btn button,
-  .cid-r9j3XiXeeZ .input-group-btn a {
-    margin-left: 0 !important;
-    margin-right: 0 !important;
-  }
-}
-@media (min-width: 769px) {
-  .cid-r9j3XiXeeZ .mbr-subscribe > * {
-    margin: 0 0.5rem;
-  }
 }
 .cid-r9j38sJxbl {
   padding-top: 30px;
