--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -7078,35 +7078,35 @@ body {
 .cid-r6FHrnUaDb .mbr-section-subtitle B {
   color: #000000;
 }
-.cid-r6FHsC7cQ9 {
+.cid-rf92S3yNfq {
   padding-top: 15px;
   padding-bottom: 15px;
   background-color: #ffffff;
 }
-.cid-r6FHsC7cQ9 p {
+.cid-rf92S3yNfq p {
   color: #767676;
 }
-.cid-r6FHsC7cQ9 .mbr-section-subtitle {
+.cid-rf92S3yNfq .mbr-section-subtitle {
   color: #000000;
   text-align: left;
 }
-.cid-r6FHsC7cQ9 .accordion-content {
+.cid-rf92S3yNfq .accordion-content {
   flex-basis: 100%;
   -webkit-flex-basis: 100%;
 }
-.cid-r6FHsC7cQ9 .panel-group {
+.cid-rf92S3yNfq .panel-group {
   width: 100%;
 }
-.cid-r6FHsC7cQ9 .card {
+.cid-rf92S3yNfq .card {
   border-radius: 0px;
   margin-bottom: -1px;
 }
-.cid-r6FHsC7cQ9 .card .card-header {
+.cid-rf92S3yNfq .card .card-header {
   border-radius: 0px;
   border: 0px;
   padding: 0;
 }
-.cid-r6FHsC7cQ9 .card .card-header a.panel-title {
+.cid-rf92S3yNfq .card .card-header a.panel-title {
   margin-bottom: 0;
   font-style: normal;
   font-weight: 500;
@@ -7115,34 +7115,34 @@ body {
   margin-top: -1px;
   line-height: normal;
 }
-.cid-r6FHsC7cQ9 .card .card-header a.panel-title:focus {
+.cid-rf92S3yNfq .card .card-header a.panel-title:focus {
   text-decoration: none !important;
 }
-.cid-r6FHsC7cQ9 .card .card-header a.panel-title h4 {
+.cid-rf92S3yNfq .card .card-header a.panel-title h4 {
   padding: 1.3rem 2rem;
   border: 1px solid #dfdfdf;
   margin-bottom: 0;
 }
-.cid-r6FHsC7cQ9 .card .card-header a.panel-title h4 .sign {
+.cid-rf92S3yNfq .card .card-header a.panel-title h4 .sign {
   padding-right: 1rem;
 }
-.cid-r6FHsC7cQ9 .mbr-figure {
+.cid-rf92S3yNfq .mbr-figure {
   -webkit-align-self: flex-start;
   align-self: flex-start;
   padding-left: 4rem;
   padding-left: 0;
   padding-right: 4rem;
 }
-.cid-r6FHsC7cQ9 .media-container-row {
+.cid-rf92S3yNfq .media-container-row {
   -webkit-flex-direction: row-reverse;
   flex-direction: row-reverse;
 }
 @media (max-width: 991px) {
-  .cid-r6FHsC7cQ9 .media-container-row {
+  .cid-rf92S3yNfq .media-container-row {
     -webkit-flex-direction: column-reverse;
     flex-direction: column-reverse;
   }
-  .cid-r6FHsC7cQ9 .mbr-figure {
+  .cid-rf92S3yNfq .mbr-figure {
     padding-right: 0;
     padding-left: 0;
     padding-top: 2rem;
@@ -7150,21 +7150,18 @@ body {
     padding-bottom: 2rem;
   }
 }
-.cid-r6FHsC7cQ9 H4 {
+.cid-rf92S3yNfq H4 {
   text-align: center;
   color: #000000;
 }
-.cid-r6FHsC7cQ9 .panel-text {
+.cid-rf92S3yNfq .panel-text {
   color: #000000;
 }
-.cid-r6FHsC7cQ9 H2 {
+.cid-rf92S3yNfq H2 {
   text-align: left;
   color: #1ea416;
 }
-.cid-r6FHsC7cQ9 .mbr-section-subtitle B {
-  color: #000000;
-}
-.cid-r6FHsC7cQ9 .panel-text P {
+.cid-rf92S3yNfq .mbr-section-subtitle B {
   color: #000000;
 }
 .cid-r6FHrW2s5h {
