--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Rubik:300,300i,400,400i,500,500i,700,700i,900,900i);
+@import url(https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i);
 
 
 
@@ -20,35 +20,35 @@ body {
   line-height: 1.6;
 }
 .display-1 {
-  font-family: 'Rubik', sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-size: 4.25rem;
 }
 .display-1 > .mbr-iconfont {
   font-size: 6.8rem;
 }
 .display-2 {
-  font-family: 'Rubik', sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-size: 2.7rem;
 }
 .display-2 > .mbr-iconfont {
   font-size: 4.32rem;
 }
 .display-4 {
-  font-family: 'Rubik', sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-size: 0.9rem;
 }
 .display-4 > .mbr-iconfont {
   font-size: 1.44rem;
 }
 .display-5 {
-  font-family: 'Rubik', sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-size: 1.65rem;
 }
 .display-5 > .mbr-iconfont {
   font-size: 2.64rem;
 }
 .display-7 {
-  font-family: 'Rubik', sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-size: 1rem;
 }
 .display-7 > .mbr-iconfont {
@@ -641,7 +641,7 @@ a:hover {
   background-color: #f5f5f5;
   box-shadow: none;
   color: #565656;
-  font-family: 'Rubik', sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-size: 1rem;
   line-height: 1.43;
   min-height: 3.5em;
@@ -8890,161 +8890,82 @@ body {
 .cid-r6QfGv3iFP H2 {
   color: #ffffff;
 }
-.cid-r6Kn4tulQw {
-  padding-top: 75px;
-  padding-bottom: 75px;
-  position: relative;
-  background-color: #ffffff;
-}
-.cid-r6Kn4tulQw p {
-  color: #767676;
-}
-.cid-r6Kn4tulQw .mbr-section-subtitle {
-  color: #000000;
-  font-weight: 300;
-}
-.cid-r6Kn4tulQw .toggle-content {
-  flex-basis: 100%;
-  -webkit-flex-basis: 100%;
-}
-.cid-r6Kn4tulQw .card {
-  border-radius: 0px;
-  margin-bottom: -1px;
-}
-.cid-r6Kn4tulQw .card .card-header {
-  border-radius: 0px;
-  border: 0px;
-  padding: 0;
-}
-.cid-r6Kn4tulQw .card .card-header a.panel-title {
-  margin-bottom: 0;
-  margin-top: -1px;
-  font-weight: 500;
-  font-style: normal;
-  display: block;
-  text-decoration: none !important;
-}
-.cid-r6Kn4tulQw .card .card-header a.panel-title:focus {
-  text-decoration: none !important;
-}
-.cid-r6Kn4tulQw .card .card-header a.panel-title h4 {
-  border: 1px solid #dfdfdf;
-  padding: 1.3rem 2rem;
-  margin-bottom: 0;
-}
-.cid-r6Kn4tulQw .card .card-header a.panel-title h4 .sign {
-  padding-right: 1rem;
-}
-.cid-r6Kn4tulQw .mbr-figure {
-  align-self: flex-start;
-  -webkit-align-self: flex-start;
-}
-@media (max-width: 991px) {
-  .cid-r6Kn4tulQw .mbr-figure {
-    padding-top: 2rem;
-  }
-}
-@media (min-width: 992px) {
-  .cid-r6Kn4tulQw .mbr-figure {
-    padding-left: 4rem;
-  }
-}
-.cid-r6Kn4tulQw H4 {
-  color: #000000;
-  text-align: center;
-}
-.cid-r6Kn4tulQw .panel-text {
-  text-align: left;
-  color: #000000;
-}
-.cid-r6Kn4tulQw H2 {
-  text-align: center;
-}
-.cid-r6Kn4tulQw .mbr-section-subtitle DIV {
-  color: #000000;
-  text-align: center;
-}
-.cid-r6Kos5vVCe {
+.cid-rjvjo3FQO0 {
   padding-top: 0px;
-  padding-bottom: 75px;
-  position: relative;
+  padding-bottom: 60px;
   background-color: #ffffff;
 }
-.cid-r6Kos5vVCe p {
+.cid-rjvjo3FQO0 p {
   color: #767676;
 }
-.cid-r6Kos5vVCe .mbr-section-subtitle {
-  color: #767676;
-  font-weight: 300;
+.cid-rjvjo3FQO0 .mbr-section-subtitle {
+  color: #000000;
+  text-align: center;
 }
-.cid-r6Kos5vVCe .toggle-content {
+.cid-rjvjo3FQO0 .accordion-content {
   flex-basis: 100%;
   -webkit-flex-basis: 100%;
 }
-.cid-r6Kos5vVCe .card {
+.cid-rjvjo3FQO0 .panel-group {
+  width: 100%;
+}
+.cid-rjvjo3FQO0 .card {
   border-radius: 0px;
   margin-bottom: -1px;
 }
-.cid-r6Kos5vVCe .card .card-header {
+.cid-rjvjo3FQO0 .card .card-header {
   border-radius: 0px;
   border: 0px;
   padding: 0;
 }
-.cid-r6Kos5vVCe .card .card-header a.panel-title {
+.cid-rjvjo3FQO0 .card .card-header a.panel-title {
   margin-bottom: 0;
-  margin-top: -1px;
-  font-weight: 500;
   font-style: normal;
+  font-weight: 500;
   display: block;
   text-decoration: none !important;
+  margin-top: -1px;
+  line-height: normal;
 }
-.cid-r6Kos5vVCe .card .card-header a.panel-title:focus {
+.cid-rjvjo3FQO0 .card .card-header a.panel-title:focus {
   text-decoration: none !important;
 }
-.cid-r6Kos5vVCe .card .card-header a.panel-title h4 {
-  border: 1px solid #dfdfdf;
+.cid-rjvjo3FQO0 .card .card-header a.panel-title h4 {
   padding: 1.3rem 2rem;
+  border: 1px solid #dfdfdf;
   margin-bottom: 0;
 }
-.cid-r6Kos5vVCe .card .card-header a.panel-title h4 .sign {
+.cid-rjvjo3FQO0 .card .card-header a.panel-title h4 .sign {
   padding-right: 1rem;
 }
-.cid-r6Kos5vVCe .mbr-figure {
-  align-self: flex-start;
+.cid-rjvjo3FQO0 .mbr-figure {
   -webkit-align-self: flex-start;
+  align-self: flex-start;
+  padding-left: 4rem;
 }
 @media (max-width: 991px) {
-  .cid-r6Kos5vVCe .mbr-figure {
-    padding-top: 2rem;
-    padding-top: 0;
-    padding-bottom: 2rem;
-  }
-  .cid-r6Kos5vVCe .media-container-row {
-    -webkit-flex-direction: column-reverse;
-    flex-direction: column-reverse;
-  }
-}
-@media (min-width: 992px) {
-  .cid-r6Kos5vVCe .mbr-figure {
-    padding-left: 4rem;
+  .cid-rjvjo3FQO0 .mbr-figure {
+    padding-right: 0;
     padding-left: 0;
-    padding-right: 4rem;
-  }
-  .cid-r6Kos5vVCe .media-container-row {
-    -webkit-flex-direction: row-reverse;
-    flex-direction: row-reverse;
+    padding-top: 2rem;
   }
 }
-.cid-r6Kos5vVCe H4 {
-  color: #000000;
+.cid-rjvjo3FQO0 H4 {
   text-align: center;
-}
-.cid-r6Kos5vVCe .panel-text {
-  text-align: left;
   color: #000000;
 }
-.cid-r6Kos5vVCe H2 {
+.cid-rjvjo3FQO0 .panel-text {
+  color: #000000;
+}
+.cid-rjvjo3FQO0 H2 {
   text-align: center;
+  color: #1ea416;
+}
+.cid-rjvjo3FQO0 .mbr-section-subtitle B {
+  color: #000000;
+}
+.cid-rjvjo3FQO0 B {
+  color: #000000;
 }
 .cid-r6KBt0LpCO {
   padding-top: 30px;
@@ -9464,87 +9385,54 @@ body {
 .cid-r6QfMoYTY9 H2 {
   color: #ffffff;
 }
-.cid-r6FxYcMbFN {
-  padding-top: 75px;
-  padding-bottom: 90px;
-  position: relative;
+.cid-rjvkN5ygVT {
+  padding-top: 60px;
+  padding-bottom: 60px;
   background-color: #ffffff;
 }
-.cid-r6FxYcMbFN p {
-  color: #767676;
+.cid-rjvkN5ygVT .carousel-item {
+  justify-content: center;
+  -webkit-justify-content: center;
 }
-.cid-r6FxYcMbFN .mbr-section-subtitle {
-  color: #000000;
-  font-weight: 300;
-  text-align: left;
+.cid-rjvkN5ygVT .carousel-item.active,
+.cid-rjvkN5ygVT .carousel-item-next,
+.cid-rjvkN5ygVT .carousel-item-prev {
+  display: flex;
 }
-.cid-r6FxYcMbFN .toggle-content {
-  flex-basis: 100%;
-  -webkit-flex-basis: 100%;
+.cid-rjvkN5ygVT .carousel-controls a {
+  transition: opacity .5s;
+  font-size: 2rem;
 }
-.cid-r6FxYcMbFN .card {
-  border-radius: 0px;
-  margin-bottom: -1px;
+.cid-rjvkN5ygVT .carousel-controls a span {
+  position: absolute;
+  top: 180px;
+  padding: 10px;
+  border-radius: 50%;
+  color: #585858;
+  background: #c8c6c6;
+  opacity: .5;
 }
-.cid-r6FxYcMbFN .card .card-header {
-  border-radius: 0px;
-  border: 0px;
-  padding: 0;
+.cid-rjvkN5ygVT .carousel-controls a:hover span {
+  opacity: 1;
 }
-.cid-r6FxYcMbFN .card .card-header a.panel-title {
-  margin-bottom: 0;
-  margin-top: -1px;
-  font-weight: 500;
-  font-style: normal;
-  display: block;
-  text-decoration: none !important;
+.cid-rjvkN5ygVT .user_image {
+  width: 200px;
+  height: 200px;
+  margin-bottom: 1.6rem;
+  overflow: hidden;
+  border-radius: 50%;
+  margin: 0 auto 2rem auto;
 }
-.cid-r6FxYcMbFN .card .card-header a.panel-title:focus {
-  text-decoration: none !important;
+.cid-rjvkN5ygVT .user_image img {
+  width: 100%;
+  min-width: 100%;
+  min-height: 100%;
 }
-.cid-r6FxYcMbFN .card .card-header a.panel-title h4 {
-  border: 1px solid #dfdfdf;
-  padding: 1.3rem 2rem;
-  margin-bottom: 0;
-}
-.cid-r6FxYcMbFN .card .card-header a.panel-title h4 .sign {
-  padding-right: 1rem;
-}
-.cid-r6FxYcMbFN .mbr-figure {
-  align-self: flex-start;
-  -webkit-align-self: flex-start;
-}
-@media (max-width: 991px) {
-  .cid-r6FxYcMbFN .mbr-figure {
-    padding-top: 2rem;
-    padding-top: 0;
-    padding-bottom: 2rem;
+@media (max-width: 230px) {
+  .cid-rjvkN5ygVT .user_image {
+    width: 100%;
+    height: auto;
   }
-  .cid-r6FxYcMbFN .media-container-row {
-    -webkit-flex-direction: column-reverse;
-    flex-direction: column-reverse;
-  }
-}
-@media (min-width: 992px) {
-  .cid-r6FxYcMbFN .mbr-figure {
-    padding-left: 4rem;
-    padding-left: 0;
-    padding-right: 4rem;
-  }
-  .cid-r6FxYcMbFN .media-container-row {
-    -webkit-flex-direction: row-reverse;
-    flex-direction: row-reverse;
-  }
-}
-.cid-r6FxYcMbFN H4 {
-  color: #000000;
-}
-.cid-r6FxYcMbFN .panel-text {
-  color: #000000;
-}
-.cid-r6FxYcMbFN H2 {
-  color: #000000;
-  text-align: center;
 }
 .cid-r6KBxR2tYq {
   padding-top: 30px;
