--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1294,6 +1294,11 @@ body {
     flex: auto!important;
   }
 }
+.cid-rjLHi5lPOL {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
 .cid-rjLoMDUlDD {
   background-image: url("../../../assets/images/adorable-affection-baby-1257110-2000x1333.jpg");
 }
