--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -10440,185 +10440,65 @@ body {
 .cid-r6Qfx36eap H2 {
   color: #ffffff;
 }
-.cid-r6JWd79Wee {
-  padding-top: 15px;
-  padding-bottom: 0px;
-  background-color: #ffffff;
-}
-.cid-r6JWd79Wee .mbr-section-subtitle {
-  color: #767676;
-  font-weight: 300;
-}
-.cid-r6JWd79Wee .media-container-row {
-  word-wrap: break-word;
-  word-break: break-word;
-  align-items: stretch;
-  -webkit-align-items: stretch;
-}
-.cid-r6JWd79Wee .card_cont {
-  -o-transition: all .5s;
-  -ms-transition: all .5s;
-  -moz-transition: all .5s;
-  -webkit-transition: all .5s;
-  transition: all .5s;
-  -o-backface-visibility: hidden;
-  -ms-backface-visibility: hidden;
-  -moz-backface-visibility: hidden;
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  text-align: center;
-  background-color: #eee;
-}
-.cid-r6JWd79Wee .card-front {
-  z-index: 2;
-  padding: 0;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-}
-.cid-r6JWd79Wee .card-front img {
-  min-height: 100%;
-  min-width: 100%;
-  width: auto;
-  max-width: 600px;
-}
-.cid-r6JWd79Wee .card_back {
-  width: 100%;
-  height: 100%;
-  padding: 30px 30px;
-  color: #ffffff;
-  background-color: #1ea416;
-  z-index: 1;
-  margin: 0;
-  text-align: center;
-  overflow: hidden;
-  -o-transform: rotateY(-180deg);
-  -ms-transform: rotateY(-180deg);
-  -moz-transform: rotateY(-180deg);
-  -webkit-transform: rotateY(-180deg);
-  transform: rotateY(-180deg);
-}
-.cid-r6JWd79Wee .card {
-  min-height: 300px;
-}
-.cid-r6JWd79Wee .card:hover .card-front {
-  z-index: 1;
-  -o-transform: rotateY(180deg);
-  -ms-transform: rotateY(180deg);
-  -moz-transform: rotateY(180deg);
-  -webkit-transform: rotateY(180deg);
-  transform: rotateY(180deg);
-}
-.cid-r6JWd79Wee .card:hover .card_back {
-  z-index: 2;
-  -o-transform: rotateY(0deg);
-  -ms-transform: rotateY(0deg);
-  -moz-transform: rotateY(0deg);
-  -webkit-transform: rotateY(0deg);
-  transform: rotateY(0deg);
-}
-.cid-r6JWd79Wee .builderCard .card_back {
-  border-bottom-left-radius: 100px;
-}
-.cid-r6JWd79Wee .builderCard .card_cont {
-  -o-backface-visibility: hidden;
-  -ms-backface-visibility: hidd;
-  -moz-backface-visibility: visible;
-  -webkit-backface-visibility: visible;
-  backface-visibility: visible;
-}
-.cid-r6JXDVmpYS {
+.cid-rjLQk2iPLK {
   padding-top: 0px;
-  padding-bottom: 45px;
+  padding-bottom: 60px;
   background-color: #ffffff;
 }
-.cid-r6JXDVmpYS .mbr-section-subtitle {
+.cid-rjLQk2iPLK .mbr-section-text {
   color: #000000;
-  font-weight: 300;
+  text-align: left;
 }
-.cid-r6JXDVmpYS .media-container-row {
-  word-wrap: break-word;
-  word-break: break-word;
-  align-items: stretch;
-  -webkit-align-items: stretch;
+.cid-rjLQk2iPLK .mbr-section-subtitle {
+  color: #767676;
 }
-.cid-r6JXDVmpYS .card_cont {
-  -o-transition: all .5s;
-  -ms-transition: all .5s;
-  -moz-transition: all .5s;
-  -webkit-transition: all .5s;
-  transition: all .5s;
-  -o-backface-visibility: hidden;
-  -ms-backface-visibility: hidden;
-  -moz-backface-visibility: hidden;
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  text-align: center;
-  background-color: #eee;
+.cid-rjLQk2iPLK .tabcont {
+  -webkit-justify-content: center;
+  justify-content: center;
 }
-.cid-r6JXDVmpYS .card-front {
-  z-index: 2;
-  padding: 0;
+.cid-rjLQk2iPLK .mbr-iconfont {
+  font-size: 48px;
+}
+.cid-rjLQk2iPLK .card-img {
+  margin-bottom: 1.5rem;
+}
+.cid-rjLQk2iPLK .tab-content-row {
+  -webkit-justify-content: center;
+  justify-content: center;
+}
+.cid-rjLQk2iPLK .tab-content {
+  margin-top: 3rem;
   width: 100%;
-  height: 100%;
-  overflow: hidden;
 }
-.cid-r6JXDVmpYS .card-front img {
-  min-height: 100%;
-  min-width: 100%;
-  width: auto;
-  max-width: 600px;
+.cid-rjLQk2iPLK .nav-tabs {
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+  border-bottom: none;
 }
-.cid-r6JXDVmpYS .card_back {
-  width: 100%;
-  height: 100%;
-  padding: 30px 30px;
+.cid-rjLQk2iPLK .nav-tabs .nav-link {
+  box-sizing: border-box;
+  color: #000000;
+  font-style: normal;
+  font-weight: 500;
+  border-radius: 3px;
+  padding: 1rem 3rem;
+  margin: 0.4rem .8rem !important;
+  transition: color .3s;
+  border: 2px solid #000000;
+}
+.cid-rjLQk2iPLK .nav-tabs .nav-link:hover {
+  background: #1ea416;
+}
+.cid-rjLQk2iPLK .nav-tabs .nav-link.active {
   color: #ffffff;
-  background-color: #1ea416;
-  z-index: 1;
-  margin: 0;
-  text-align: center;
-  overflow: hidden;
-  -o-transform: rotateY(-180deg);
-  -ms-transform: rotateY(-180deg);
-  -moz-transform: rotateY(-180deg);
-  -webkit-transform: rotateY(-180deg);
-  transform: rotateY(-180deg);
+  font-style: normal;
+  border: 2px solid #1ea416;
+  background: #1ea416;
 }
-.cid-r6JXDVmpYS .card {
-  min-height: 300px;
-}
-.cid-r6JXDVmpYS .card:hover .card-front {
-  z-index: 1;
-  -o-transform: rotateY(180deg);
-  -ms-transform: rotateY(180deg);
-  -moz-transform: rotateY(180deg);
-  -webkit-transform: rotateY(180deg);
-  transform: rotateY(180deg);
-}
-.cid-r6JXDVmpYS .card:hover .card_back {
-  z-index: 2;
-  -o-transform: rotateY(0deg);
-  -ms-transform: rotateY(0deg);
-  -moz-transform: rotateY(0deg);
-  -webkit-transform: rotateY(0deg);
-  transform: rotateY(0deg);
-}
-.cid-r6JXDVmpYS .builderCard .card_back {
-  border-bottom-left-radius: 100px;
-}
-.cid-r6JXDVmpYS .builderCard .card_cont {
-  -o-backface-visibility: hidden;
-  -ms-backface-visibility: hidd;
-  -moz-backface-visibility: visible;
-  -webkit-backface-visibility: visible;
-  backface-visibility: visible;
+.cid-rjLQk2iPLK .nav-tabs .nav-link.active:hover {
+  border: 2px solid #1ea416;
 }
 .cid-r7YMy10S66 {
   padding-top: 30px;
